# lab05dz

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: Account.h  Transaction.h
src/: Account.cpp
test/: AccountTest.cpp  MockAccount.h  TransactionTest.cpp  main.cpp
